--- a/requirements.txt
+++ b/requirements.txt
@@ -38,9 +38,9 @@ h5py==3.14.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-ipykernel==6.30.1
-ipython==8.37.0
-ipywidgets==8.1.7
+# ipykernel==6.30.1
+# ipython==8.37.0
+# ipywidgets==8.1.7
 isoduration==20.11.0
 itsdangerous==2.2.0
 jedi==0.19.2
@@ -50,18 +50,18 @@ json5==0.12.1
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.6
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
+# jupyter==1.1.1
+# jupyter-console==6.6.3
+# jupyter-events==0.12.0
+# jupyter-lsp==2.3.0
+# jupyter_client==8.6.3
+# jupyter_core==5.8.1
+# jupyter_server==2.17.0
+# jupyter_server_terminals==0.5.3
+# jupyterlab==4.4.6
+# jupyterlab_pygments==0.3.0
+# jupyterlab_server==2.27.3
+# jupyterlab_widgets==3.0.15
 keras==3.11.3
 kiwisolver==1.4.9
 lark==1.2.2
@@ -104,7 +104,7 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytz==2025.2
-pywinpty==3.0.0
+
 PyYAML==6.0.2
 pyzmq==27.0.2
 referencing==0.36.2
@@ -114,11 +114,11 @@ rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rich==14.1.0
 rpds-py==0.27.1
-scikit-learn==1.7.1
+# scikit-learn==1.7.1
 scipy==1.15.3
 seaborn==0.13.2
 Send2Trash==1.8.3
-shap==0.48.0
+# shap==0.48.0
 six==1.17.0
 slicer==0.0.8
 sniffio==1.3.1
