--- a/requirements.txt
+++ b/requirements.txt
@@ -119,7 +119,7 @@ rpds-py==0.27.1
 scipy==1.15.3
 seaborn==0.13.2
 Send2Trash==1.8.3
-# shap==0.48.0
+shap==0.48.0
 six==1.17.0
 slicer==0.0.8
 sniffio==1.3.1
